test/files/neg/t9953.check
t9953.scala:12: warning: Object and X are unrelated: they will never compare equal
  def b = y == x   // warn
            ^
1 warning
error: No warnings can be incurred under -Werror.
